<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageCountry"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/icon_flag"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/title_country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/Title"
                android:text="@string/country_name_title"/>

            <TextView
                android:id="@+id/text_country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/Text"
                tools:text="Capital"/>

            <TextView
                android:id="@+id/title_capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/Title"
                android:text="@string/country_capital_title"/>

            <TextView
                android:id="@+id/text_capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/Text"
                tools:text="Capital"/>

            <TextView
                android:id="@+id/title_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/Title"
                android:text="@string/country_population_title"/>

            <TextView
                android:id="@+id/text_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/Text"
                tools:text="Capital"/>

            <TextView
                android:id="@+id/title_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/Title"
                android:text="@string/country_region_title"/>

            <TextView
                android:id="@+id/text_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/Text"
                tools:text="Capital"/>

            <TextView
                android:id="@+id/title_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/Title"
                android:text="@string/country_description_title"/>

            <EditText
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="Escriba aquí"
                android:imeOptions="actionUnspecified"
                android:inputType="textMultiLine"
                android:lines="1"
                style="@style/Text" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/Button"
        android:text="@string/btn_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>